--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-id-generator": "^3.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
     "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.4"
